[gd_scene load_steps=15 format=3 uid="uid://ded5qcwcmmv2o"]

[ext_resource type="Script" uid="uid://eqf5ehm4tajh" path="res://Scripts/enemy/enemy_vl.gd" id="1_k5hu2"]
[ext_resource type="SpriteFrames" uid="uid://dqiw7hb5k15r2" path="res://Assets/Enemy/enemy_sprite_frames.tres" id="2_4qfwf"]
[ext_resource type="Texture2D" uid="uid://didkoon0746vs" path="res://Assets/shadow/shadow.png" id="3_33013"]
[ext_resource type="Script" uid="uid://o01oig0pndg5" path="res://Scripts/stats/health.gd" id="3_m1oif"]
[ext_resource type="Script" uid="uid://cycnwxgp3u6o5" path="res://Scripts/stats/damagable.gd" id="4_edvrr"]
[ext_resource type="Script" uid="uid://bsqya3w8bptdj" path="res://Scripts/items/drop.gd" id="5_rol3d"]
[ext_resource type="PackedScene" uid="uid://c4tpr8vvvw4r8" path="res://Prefabs/items/coin.tscn" id="6_4qfwf"]

[sub_resource type="Animation" id="Animation_33013"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.1),
"update": 0,
"values": [Vector2(0.0218333, 0.025)]
}

[sub_resource type="Animation" id="Animation_4uocp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.0218333, 0.025)]
}

[sub_resource type="Animation" id="Animation_34ktt"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"spawn"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.93333),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [Vector2(0, -1000), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Shadow:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.93333),
"transitions": PackedFloat32Array(1, 0.1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.0218333, 0.025)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7w1n0"]
_data = {
&"RESET": SubResource("Animation_4uocp"),
&"idle": SubResource("Animation_33013"),
&"spawn": SubResource("Animation_34ktt")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_edvrr"]
radius = 25.0
height = 50.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1oif"]
size = Vector2(50, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_edvrr"]
size = Vector2(50, 50)

[node name="EnemyVl" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_k5hu2")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(2, 1)
scale = Vector2(0.0218333, 0.025)
texture = ExtResource("3_33013")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = ExtResource("2_4qfwf")
animation = &"idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7w1n0")
}
autoplay = "spawn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_edvrr")

[node name="Health" type="Node" parent="."]
script = ExtResource("3_m1oif")
team = 1

[node name="Damagable" type="Node" parent="." node_paths=PackedStringArray("knockbackFrom")]
script = ExtResource("4_edvrr")
knockbackFrom = NodePath("..")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
scale = Vector2(1, 1)
shape = SubResource("RectangleShape2D_m1oif")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_edvrr")

[node name="Drop" type="Node" parent="."]
script = ExtResource("5_rol3d")
coin = ExtResource("6_4qfwf")

[connection signal="damaged" from="Health" to="." method="_on_damaged"]
[connection signal="died" from="Health" to="." method="_on_died"]
[connection signal="died" from="Health" to="Drop" method="_on_health_died"]
[connection signal="invuln_ended" from="Health" to="." method="_flashOff"]
[connection signal="invuln_started" from="Health" to="." method="_flashOn"]
[connection signal="area_entered" from="Hitbox" to="Damagable" method="_on_hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="Damagable" method="_on_hitbox_area_exited"]
[connection signal="body_entered" from="Hitbox" to="Damagable" method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="Hitbox" to="Damagable" method="_on_hitbox_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="on_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="on_area_exited"]
[connection signal="body_entered" from="Hurtbox" to="." method="on_body_entered"]
[connection signal="body_exited" from="Hurtbox" to="." method="on_body_exited"]
